# templates.nix

./: .gitignore  README.md  flake.nix  shell.nix  treefmt.nix
cplusplus/: .clang-format  .gitignore  CMakeLists.txt  README.md  git-hooks.nix  justfile  shell.nix  treefmt.nix
cplusplus/src/: CMakeLists.txt  main.cpp  shapes.cpp  shapes.h
python/: README.md  flake.nix  git-hooks.nix  pyproject.toml  shell.nix  treefmt.nix
trivial/: README.md
typst/: .gitignore  flake.nix  git-hooks.nix  main.typ  shell.nix  treefmt.nix
typst/trivial/: .gitignore  README.md  flake.nix  main.typ
